--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </head>
 
 <body>
-    <a href="https://tudify.co.uk/menu" class="menu-button">Menu</a>
+    <a href="https://tudify.cloud/menu.htm" class="menu-button">Menu</a>
     <div class="content">
         <div class="container">
             <div class="card">
