--- a/menu.html
+++ b/menu.html
@@ -179,7 +179,7 @@
 
 <body>
     <!-- Menu Button -->
-    <a href="https://tudify.co.uk/" class="menu-button">close</a>
+    <a href="https://tudify.cloud" class="menu-button">close</a>
 
     <!-- Main Content -->
     <div class="content">
