--- a/menu.html
+++ b/menu.html
@@ -3,46 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tudify</title>
+    <title>Tudify cloud</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="icon" type="image/x-icon" href="/images/Tudify%20CD.ico">
+    <link rel="icon" type="image/x-icon" href="https://tudify.co.uk/images/Tudify%20CD.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="icon" href="https://tudify.co.uk/icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap" rel="stylesheet">
     <meta name="description" content="Tudify is on a mission to make better tech.">
     <meta name="title" content="Tudify - menu">
-    <meta name="keywords" content="SimpleWeb, browser, secure browser, Windows browser, high performance, download browser, tudify, phone, software, pay, kids, wallpapers">
     <style>
         body {
-            background-color: #222;
-            font-family: 'Poppins', arial, system-ui;
+            background-color: #f4f4f4; /* Light grey background */
+            font-family: 'DM Sans', sans-serif;
             margin: 0;
             padding: 0;
+            color: #333; /* Dark grey text color for better readability */
         }
 
         a {
-            color: white;
+            color: inherit;
             text-decoration: none;
         }
 
-        /* width */
         ::-webkit-scrollbar {
             width: 7px;
         }
 
-        i {
-            text-align: center;
-        }
-
-        hr.solid {
-            border-top: 3px solid #bbb;
-        }
-
         .menu-button {
-            background-color: #657565;
+            background-color: #007acc;
             color: white;
             padding: 10px 20px;
             border-radius: 5px;
@@ -53,6 +43,11 @@
             font-weight: bold;
             z-index: 1000;
             text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .menu-button:hover {
+            background-color: #4a4a4a;
         }
 
         .content {
@@ -64,22 +59,50 @@
         }
 
         .card {
-            border-radius: 8px;
-            background-color: #333;
+            border-radius: 16px;
+            background-color: white;
             margin: 10px;
             width: 320px;
             height: 450px;
             padding: 20px;
             box-sizing: border-box;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             position: relative;
+            color: #333; /* Dark grey text color for readability */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title {
+            font-size: 24px;
+            margin: 10px 0;
+        }
+
+        .card-description {
+            font-size: 16px;
+            color: #666; /* Lighter grey for the description */
+        }
+
+        .card-description1 {
+            font-size: 16px;
+        }
+
+        .card a {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            justify-content: space-between;
         }
 
         .card1 {
-            background: linear-gradient(90deg, rgba(252, 0, 255, 1) 0%, rgba(132, 234, 255, 1) 100%);
+            background: linear-gradient(135deg, rgba(0, 123, 255, 1) 0%, rgba(229, 229, 229, 1) 100%);
             color: white;
         }
 
@@ -93,47 +116,21 @@
             color: black;
         }
 
-        .card4 {
-            background: #03afff;
+        .card-kids {
+            background: linear-gradient(135deg, red, orange, yellow, green, blue, indigo, violet);
+            background-size: 600% 600%;
+            animation: gradientAnimation 10s ease infinite;
             color: white;
         }
 
-        .card:hover,
-        .card1:hover,
-        .card2:hover,
-        .card3:hover,
-        .card4:hover {
-            transform: scale(1.05);
-        }
-
-        .card-title {
-            font-size: 24px;
-            margin: 10px 0;
-        }
-
-        .card-description {
-            font-size: 16px;
-            color: #bbb;
-        }
-
-        .card-description1 {
-            font-size: 16px;
-        }
-
-        .card a {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            justify-content: space-between;
-            text-decoration: none;
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         @media screen and (max-width: 768px) {
-            .card,
-            .card1,
-            .card2,
-            .card3,
-            .card4 {
+            .card {
                 width: calc(50% - 20px);
             }
 
@@ -141,18 +138,13 @@
                 font-size: 20px;
             }
 
-            .card-description,
-            .card-description1 {
+            .card-description, .card-description1 {
                 font-size: 14px;
             }
         }
 
         @media screen and (max-width: 480px) {
-            .card,
-            .card1,
-            .card2,
-            .card3,
-            .card4 {
+            .card {
                 width: calc(100% - 20px);
             }
 
@@ -160,8 +152,7 @@
                 font-size: 18px;
             }
 
-            .card-description,
-            .card-description1 {
+            .card-description, .card-description1 {
                 font-size: 12px;
             }
         }
@@ -178,10 +169,8 @@
 </head>
 
 <body>
-    <!-- Menu Button -->
-    <a href="https://tudify.cloud/" class="menu-button">close</a>
+    <a href="https://tudify.co.uk/" class="menu-button">Close</a>
 
-    <!-- Main Content -->
     <div class="content">
         <div class="card">
             <a href="https://tudify.co.uk/">
@@ -197,17 +186,17 @@
         </div>
         <div class="card">
             <a href="https://tudify.co.uk/tv">
-                <div class="card-title">Tudify tv</div>
+                <div class="card-title">Tudify TV</div>
                 <div class="card-description">Watch TV for free with our refreshed app.</div>
             </a>
         </div>
         <div class="card">
             <a href="https://tudify.co.uk/SimpleWeb">
                 <div class="card-title">SimpleWeb <u><b>NEW</b></u></div>
-                <div class="card-description">Check out the new SimpleWeb browser. no clutter. no price.</div>
+                <div class="card-description">Check out the new SimpleWeb browser. No clutter. No price.</div>
             </a>
         </div>
-        <div class="card card4">
+        <div class="card card1">
             <a href="/support">
                 <div class="card-title">Support</div>
                 <div class="card-description1">Support in the cleanest experience we've ever designed.</div>
@@ -216,7 +205,7 @@
         <div class="card card3">
             <a href="https://pearweb.webflow.io">
                 <div class="card-title">PearWeb 19 <u><b>NEW</b></u></div>
-                <div class="card-description1">Pear services. they're all in this updated experience.</div>
+                <div class="card-description1">Pear services. They're all in this updated experience.</div>
             </a>
         </div>
         <div class="card card1">
@@ -225,7 +214,7 @@
                 <div class="card-description1">✨Rewards just got good, and system integrated.✨</div>
             </a>
         </div>
-        <div class="card card2">
+        <div class="card card-kids">
             <a href="/kids">
                 <div class="card-title">Tudify Kids</div>
                 <div class="card-description1">🌈Kids, unleashed; with fun games and educational videos, Tudify Kids is a safe place for all.</div>
@@ -233,7 +222,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <div class="footer">
         &copy; 2024 Tudify. All rights reserved.
     </div>
