--- a/menu.html
+++ b/menu.html
@@ -173,51 +173,22 @@
 
     <div class="content">
         <div class="card">
-            <a href="https://tudify.co.uk/">
-                <div class="card-title">Home</div>
-                <div class="card-description">Return to the home page.</div>
-            </a>
-        </div>
-        <div class="card">
-            <a href="https://tudify.co.uk/wall">
-                <div class="card-title">Wall</div>
-                <div class="card-description">Explore the all-new Wall feature.</div>
-            </a>
-        </div>
-        <div class="card">
-            <a href="https://tudify.co.uk/tv">
-                <div class="card-title">Tudify TV</div>
-                <div class="card-description">Watch TV for free with our refreshed app.</div>
-            </a>
-        </div>
-        <div class="card">
-            <a href="https://tudify.co.uk/SimpleWeb">
-                <div class="card-title">SimpleWeb <u><b>NEW</b></u></div>
-                <div class="card-description">Check out the new SimpleWeb browser. No clutter. No price.</div>
-            </a>
-        </div>
         <div class="card card1">
             <a href="/support">
                 <div class="card-title">Support</div>
                 <div class="card-description1">Support in the cleanest experience we've ever designed.</div>
             </a>
         </div>
-        <div class="card card3">
-            <a href="https://pearweb.webflow.io">
-                <div class="card-title">PearWeb 19 <u><b>NEW</b></u></div>
-                <div class="card-description1">Pear services. They're all in this updated experience.</div>
-            </a>
-        </div>
         <div class="card card1">
-            <a href="/Pay">
-                <div class="card-title">Tudify Pay <u><b>NEW</b></u></div>
-                <div class="card-description1">✨Rewards just got good, and system integrated.✨</div>
+            <a href="/lnabsc.htm">
+                <div class="card-title">Luna AI<u><b>NEW</b></u></div>
+                <div class="card-description1">Luna AI is the smartest AI project made by tudify so far...</div>
             </a>
         </div>
         <div class="card card-kids">
-            <a href="/kids">
-                <div class="card-title">Tudify Kids</div>
-                <div class="card-description1">🌈Kids, unleashed; with fun games and educational videos, Tudify Kids is a safe place for all.</div>
+            <a href="#">
+                <div class="card-title">Tudify cloud deployment </div>
+                <div class="card-description1">unleash your inner dev with epic management.</div>
             </a>
         </div>
     </div>
