--- a/menu.html
+++ b/menu.html
@@ -197,7 +197,7 @@
         <div class="card card-kids">
             <a href="#">
                 <div class="card-title">Tudify cloud deployment</div>
-                <div class="card-description1">unleash your inner dev with epic management.</div>
+                <div class="card-description1">Unleash your inner dev with epic management.</div>
             </a>
         </div>
     </div>
