--- a/menu.html
+++ b/menu.html
@@ -117,9 +117,7 @@
         }
 
         .card-kids {
-            background: linear-gradient(135deg, red, orange, yellow, green, blue, indigo, violet);
-            background-size: 600% 600%;
-            animation: gradientAnimation 10s ease infinite;
+            background: orange;
             color: white;
         }
 
