--- a/menu.html
+++ b/menu.html
@@ -177,7 +177,7 @@
 </head>
 
 <body>
-    <a href="https://tudify.co.uk/" class="menu-button">Close</a>
+    <a href="https://tudify.cloud/" class="menu-button">Close</a>
 
     <div class="content">
         <div class="card card1">
