--- a/menu.html
+++ b/menu.html
@@ -181,7 +181,7 @@
 
     <div class="content">
         <div class="card card1">
-            <a href="/support">
+            <a href="https://tudify.co.uk/support">
                 <div class="card-title">Support</div>
                 <div class="card-description1">Support in the cleanest experience we've ever designed.</div>
             </a>
