--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="card-support">
                 <div class="card-content">
-                    <a href="/support" aria-label="Go to support">
+                    <a href="https://tudify.co.uk/support" aria-label="Go to support">
                         <h1>Support</h1>
                         <p>Get help with your cloud services anytime, anywhere.</p>
                     </a>
