--- a/menu.html
+++ b/menu.html
@@ -114,6 +114,7 @@
         .card3 {
             background: linear-gradient(123deg, rgba(179, 253, 255, 1) 0%, rgba(254, 148, 229, 1) 100%);
             color: black;
+            display: none;
         }
 
         .card-kids {
