updated info on home page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="card-kids">
                 <div class="card-content">
                     <a href="/security" aria-label="Go to cloud security">
-                        <h1>Cloud Security</h1>
+                        <h1>Cloud Deploy</h1>
                         <p>Ensuring your data is safe with top-notch security.</p>
                     </a>
                 </div>
