--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
     </div>
     <div class="footer">
-        <h1>Tudify Cloud</h1>
+        <h1>Tudify Cloud, a tudify service</h1>
         <a href="mailto:support@tudify.co.uk">
             <h3>Email us</h3>
         </a>
