--- a/menu.html
+++ b/menu.html
@@ -194,7 +194,7 @@
             </a>
         </div>
         <div class="card card-kids">
-            <a href="#">
+            <a href="/deploy.htm">
                 <div class="card-title">Tudify cloud deployment</div>
                 <div class="card-description1">Unleash your inner dev with epic management.</div>
             </a>
