--- a/legacy.html
+++ b/legacy.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #e0e0e0; /* Light gray background for skeuomorphic feel */
             color: #333;
             margin: 0;
             padding: 0;
@@ -17,15 +17,19 @@
             width: 80%;
             margin: 0 auto;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px; /* Rounded corners for a softer look */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
+            overflow: hidden;
         }
 
         header {
-            background-color: #555;
+            background-color: #333;
+            color: #fff;
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); /* Inner shadow for depth */
         }
 
         #logo {
@@ -47,37 +51,46 @@
             color: #fff;
             text-decoration: none;
             font-weight: bold;
+            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2); /* Text shadow for a lifted effect */
         }
 
         #hero-section {
             text-align: center;
-            padding: 50px 0;
-            background-color: #e5e5e5;
+            padding: 50px 20px;
+            background: linear-gradient(to bottom, #f5f5f5, #e0e0e0); /* Gradient background for texture */
+            border-bottom: 1px solid #ddd; /* Light border for separation */
         }
 
         #hero-section h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            color: #333;
         }
 
         #hero-section p {
             font-size: 1.2em;
             margin-bottom: 30px;
+            color: #666;
         }
 
         #hero-image {
-            width: 300px;
+            width: 80%;
+            max-width: 600px;
             height: auto;
+            border-radius: 10px; /* Rounded corners for a polished look */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow for depth */
         }
 
         #features-section {
-            padding: 50px 0;
+            padding: 50px 20px;
             text-align: center;
+            background: #f5f5f5; /* Slightly different background color for separation */
         }
 
         #features-section h2 {
             font-size: 2em;
             margin-bottom: 30px;
+            color: #333;
         }
 
         .feature {
@@ -85,25 +98,30 @@
             width: 45%;
             margin: 0 2.5%;
             text-align: left;
-        }
-
-        .feature img {
-            width: 100%;
-            height: auto;
-            margin-bottom: 20px;
+            background: #fff; /* Background for each feature */
+            border: 1px solid #ddd; /* Border for each feature */
+            border-radius: 10px; /* Rounded corners for a softer look */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .feature h3 {
             font-size: 1.5em;
             margin-bottom: 10px;
+            color: #333;
+        }
+
+        .feature p {
+            color: #666;
         }
 
         #footer {
-            background-color: #555;
+            background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 20px 0;
-            margin-top: 50px;
+            padding: 20px 20px;
+            border-top: 1px solid #ddd; /* Light border for separation */
         }
 
         #footer p {
@@ -135,12 +153,10 @@
         <div id="features-section">
             <h2>Features</h2>
             <div class="feature">
-                <img src="p1_feature.png" alt="P1 Feature">
                 <h3>Pear Phone P1</h3>
                 <p>Experience seamless connectivity and unparalleled design with the Pear Phone P1. A true revolution.</p>
             </div>
             <div class="feature">
-                <img src="p2_feature.png" alt="P2 Feature">
                 <h3>Pear Phone P2</h3>
                 <p>Advanced technology packed into a sleek, ergonomic design. Pear Phone P2 redefines innovation.</p>
             </div>
