--- a/legacy.html
+++ b/legacy.html
@@ -6,8 +6,8 @@
     <title>Pear - The Future is Here</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #e0e0e0; /* Light gray background for skeuomorphic feel */
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background-color: #f0f0f0; /* Light gray background for skeuomorphic feel */
             color: #333;
             margin: 0;
             padding: 0;
@@ -16,20 +16,20 @@
         #container {
             width: 80%;
             margin: 0 auto;
-            background-color: #fff;
-            border-radius: 10px; /* Rounded corners for a softer look */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
+            background: linear-gradient(to bottom, #fff, #e0e0e0); /* Gradient background for the container */
+            border-radius: 15px; /* Rounded corners for a softer look */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
             overflow: hidden;
         }
 
         header {
-            background-color: #333;
+            background: linear-gradient(to right, #333, #666); /* Dark gradient for header */
             color: #fff;
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); /* Inner shadow for depth */
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3); /* Inner shadow for depth */
         }
 
         #logo {
@@ -51,46 +51,49 @@
             color: #fff;
             text-decoration: none;
             font-weight: bold;
-            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2); /* Text shadow for a lifted effect */
+            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3); /* Text shadow for a lifted effect */
         }
 
         #hero-section {
             text-align: center;
             padding: 50px 20px;
-            background: linear-gradient(to bottom, #f5f5f5, #e0e0e0); /* Gradient background for texture */
+            background: linear-gradient(to bottom, #f9f9f9, #e0e0e0); /* Gradient for texture */
             border-bottom: 1px solid #ddd; /* Light border for separation */
         }
 
         #hero-section h1 {
-            font-size: 2.5em;
+            font-size: 2.8em;
             margin-bottom: 20px;
-            color: #333;
+            color: #222;
+            text-shadow: 2px 2px 0 rgba(255, 255, 255, 0.8); /* Text shadow for depth */
         }
 
         #hero-section p {
-            font-size: 1.2em;
+            font-size: 1.3em;
             margin-bottom: 30px;
-            color: #666;
+            color: #555;
+            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.8); /* Text shadow for clarity */
         }
 
         #hero-image {
-            width: 80%;
-            max-width: 600px;
+            width: 70%;
+            max-width: 700px;
             height: auto;
-            border-radius: 10px; /* Rounded corners for a polished look */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+            border-radius: 15px; /* Rounded corners for a polished look */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Shadow for depth */
         }
 
         #features-section {
             padding: 50px 20px;
             text-align: center;
-            background: #f5f5f5; /* Slightly different background color for separation */
+            background: linear-gradient(to bottom, #e0e0e0, #f5f5f5); /* Gradient for separation */
         }
 
         #features-section h2 {
-            font-size: 2em;
+            font-size: 2.2em;
             margin-bottom: 30px;
-            color: #333;
+            color: #222;
+            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7); /* Text shadow for depth */
         }
 
         .feature {
@@ -98,18 +101,18 @@
             width: 45%;
             margin: 0 2.5%;
             text-align: left;
-            background: #fff; /* Background for each feature */
+            background: linear-gradient(to bottom, #fff, #f0f0f0); /* Light gradient for each feature */
             border: 1px solid #ddd; /* Border for each feature */
-            border-radius: 10px; /* Rounded corners for a softer look */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+            border-radius: 15px; /* Rounded corners for a softer look */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Shadow for depth */
             padding: 20px;
             box-sizing: border-box;
         }
 
         .feature h3 {
-            font-size: 1.5em;
+            font-size: 1.7em;
             margin-bottom: 10px;
-            color: #333;
+            color: #222;
         }
 
         .feature p {
@@ -117,7 +120,7 @@
         }
 
         #footer {
-            background-color: #333;
+            background: linear-gradient(to right, #333, #666); /* Dark gradient for footer */
             color: #fff;
             text-align: center;
             padding: 20px 20px;
