--- a/legacy.html
+++ b/legacy.html
@@ -7,29 +7,34 @@
     <style>
         body {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            background-color: #f0f0f0; /* Light gray background for skeuomorphic feel */
+            background-color: #f0f0f0;
             color: #333;
             margin: 0;
             padding: 0;
         }
 
         #container {
-            width: 80%;
+            width: 960px; /* Fixed width that breaks on smaller screens */
             margin: 0 auto;
-            background: linear-gradient(to bottom, #fff, #e0e0e0); /* Gradient background for the container */
-            border-radius: 15px; /* Rounded corners for a softer look */
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
+            background: linear-gradient(to bottom, #fff, #e0e0e0);
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             overflow: hidden;
+            position: relative;
         }
 
         header {
-            background: linear-gradient(to right, #333, #666); /* Dark gradient for header */
+            background: linear-gradient(to right, #333, #666);
             color: #fff;
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3); /* Inner shadow for depth */
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
+            position: absolute; /* Absolute positioning breaks layout on mobile */
+            top: 0;
+            left: 0;
+            width: 100%;
         }
 
         #logo {
@@ -51,60 +56,63 @@
             color: #fff;
             text-decoration: none;
             font-weight: bold;
-            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3); /* Text shadow for a lifted effect */
+            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
         }
 
         #hero-section {
             text-align: center;
             padding: 50px 20px;
-            background: linear-gradient(to bottom, #f9f9f9, #e0e0e0); /* Gradient for texture */
-            border-bottom: 1px solid #ddd; /* Light border for separation */
+            background: linear-gradient(to bottom, #f9f9f9, #e0e0e0);
+            border-bottom: 1px solid #ddd;
+            position: relative; /* Positioning issues on mobile */
+            top: 70px; /* Adjusted position to make it misaligned */
         }
 
         #hero-section h1 {
             font-size: 2.8em;
             margin-bottom: 20px;
             color: #222;
-            text-shadow: 2px 2px 0 rgba(255, 255, 255, 0.8); /* Text shadow for depth */
+            text-shadow: 2px 2px 0 rgba(255, 255, 255, 0.8);
         }
 
         #hero-section p {
             font-size: 1.3em;
             margin-bottom: 30px;
             color: #555;
-            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.8); /* Text shadow for clarity */
+            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.8);
         }
 
         #hero-image {
-            width: 70%;
-            max-width: 700px;
+            width: 700px; /* Fixed width that doesn't adapt to mobile */
             height: auto;
-            border-radius: 15px; /* Rounded corners for a polished look */
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Shadow for depth */
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
 
         #features-section {
             padding: 50px 20px;
             text-align: center;
-            background: linear-gradient(to bottom, #e0e0e0, #f5f5f5); /* Gradient for separation */
+            background: linear-gradient(to bottom, #e0e0e0, #f5f5f5);
+            position: relative;
+            top: 70px; /* Adjusted position to misalign */
         }
 
         #features-section h2 {
             font-size: 2.2em;
             margin-bottom: 30px;
             color: #222;
-            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7); /* Text shadow for depth */
+            text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
         }
 
         .feature {
             display: inline-block;
-            width: 45%;
-            margin: 0 2.5%;
+            width: 400px; /* Fixed width that breaks on mobile */
+            margin: 0 10px; /* Adjusted margin */
             text-align: left;
-            background: linear-gradient(to bottom, #fff, #f0f0f0); /* Light gradient for each feature */
-            border: 1px solid #ddd; /* Border for each feature */
-            border-radius: 15px; /* Rounded corners for a softer look */
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Shadow for depth */
+            background: linear-gradient(to bottom, #fff, #f0f0f0);
+            border: 1px solid #ddd;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
             padding: 20px;
             box-sizing: border-box;
         }
@@ -120,11 +128,13 @@
         }
 
         #footer {
-            background: linear-gradient(to right, #333, #666); /* Dark gradient for footer */
+            background: linear-gradient(to right, #333, #666);
             color: #fff;
             text-align: center;
             padding: 20px 20px;
-            border-top: 1px solid #ddd; /* Light border for separation */
+            border-top: 1px solid #ddd;
+            position: relative; /* Positioning issues on mobile */
+            top: 70px; /* Adjusted position to misalign */
         }
 
         #footer p {
