--- a/BSOD.html
+++ b/BSOD.html
@@ -6,36 +6,58 @@
     <title>Windows 10 BSOD</title>
     <style>
         body {
-            background-color: #1E1E99;
+            background-color: #0078D7;
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            padding-top: 20%;
+            text-align: left;
+            padding-left: 10%;
+            padding-top: 15%;
+            margin: 0;
+            height: 100vh;
+            overflow: hidden;
         }
         .emoji {
-            font-size: 100px;
+            font-size: 120px;
+            margin-bottom: 20px;
+        }
+        h1 {
+            font-size: 28px;
+            margin: 0;
+        }
+        .loading {
+            margin-top: 20px;
+            font-size: 22px;
         }
         .error-code {
             margin-top: 30px;
-            font-size: 20px;
+            font-size: 18px;
         }
         .error-msg {
             margin-top: 50px;
             font-size: 18px;
             width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-            line-height: 1.5;
+            line-height: 1.6;
+        }
+        .footer {
+            position: absolute;
+            bottom: 10%;
+            font-size: 18px;
+            width: 80%;
         }
     </style>
 </head>
 <body>
-    <div class="emoji">:(</div>
+    <div class="emoji">:&#40;</div>
     <h1>Your PC ran into a problem and needs to restart.</h1>
-    <p class="error-code">We're just collecting some error info, and then we'll restart for you.</p>
+    <p class="loading">We're just collecting some error info, and then we'll restart for you.</p>
+    <p class="loading">0% complete</p>
     <div class="error-msg">
-        <p>For more information about this issue and possible fixes, visit https://www.windows.com/stopcode</p>
-        <p>If you call a support person, give them this info: STOP CODE: CRITICAL_PROCESS_DIED</p>
+        <p>For more information about this issue and possible fixes, visit <a href="https://www.windows.com/stopcode" style="color: white;">https://www.windows.com/stopcode</a></p>
+        <p>If you call a support person, give them this info:</p>
+        <p class="error-code">Stop code: CRITICAL_PROCESS_DIED</p>
+    </div>
+    <div class="footer">
+        <p class="error-msg">You'll be automatically signed out in an hour.</p>
     </div>
 </body>
 </html>
