--- a/BSOD.html
+++ b/BSOD.html
@@ -11,7 +11,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: left;
             padding-left: 10%;
-            padding-top: 15%;
+            padding-top: 10%;
             margin: 0;
             height: 100vh;
             overflow: hidden;
@@ -44,6 +44,27 @@
             font-size: 18px;
             width: 80%;
         }
+        .qr-code {
+            position: absolute;
+            bottom: 5%;
+            right: 10%;
+            width: 150px;
+            height: 150px;
+            background-color: white;
+            border-radius: 8px;
+        }
+        .qr-code:before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, #000 25%, transparent 25%), 
+                        linear-gradient(-45deg, #000 25%, transparent 25%), 
+                        linear-gradient(45deg, transparent 75%, #000 75%), 
+                        linear-gradient(-45deg, transparent 75%, #000 75%);
+            background-size: 20px 20px;
+            background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+        }
     </style>
 </head>
 <body>
@@ -59,5 +80,6 @@
     <div class="footer">
         <p class="error-msg">You'll be automatically signed out in an hour.</p>
     </div>
+    <div class="qr-code"></div>
 </body>
 </html>
