--- a/BSOD.html
+++ b/BSOD.html
@@ -15,9 +15,10 @@
             margin: 0;
             height: 100vh;
             overflow: hidden;
+            box-sizing: border-box;
         }
         .emoji {
-            font-size: 120px;
+            font-size: 140px;
             margin-bottom: 20px;
         }
         h1 {
@@ -40,16 +41,16 @@
         }
         .footer {
             position: absolute;
-            bottom: 10%;
+            bottom: 20%;
             font-size: 18px;
             width: 80%;
         }
         .qr-code {
             position: absolute;
             bottom: 5%;
-            right: 10%;
-            width: 150px;
-            height: 150px;
+            right: 5%;
+            width: 140px;
+            height: 140px;
             background-color: white;
             border-radius: 8px;
         }
@@ -58,12 +59,12 @@
             display: block;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg, #000 25%, transparent 25%), 
-                        linear-gradient(-45deg, #000 25%, transparent 25%), 
-                        linear-gradient(45deg, transparent 75%, #000 75%), 
-                        linear-gradient(-45deg, transparent 75%, #000 75%);
-            background-size: 20px 20px;
-            background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+            background: repeating-linear-gradient(45deg, black 0, black 10px, white 10px, white 20px), 
+                        repeating-linear-gradient(-45deg, black 0, black 10px, white 10px, white 20px),
+                        repeating-linear-gradient(45deg, white 0, white 10px, black 10px, black 20px), 
+                        repeating-linear-gradient(-45deg, white 0, white 10px, black 10px, black 20px);
+            background-size: 70px 70px;
+            background-position: 0 0, 0 35px, 35px -35px, -35px 0;
         }
     </style>
 </head>
@@ -77,7 +78,9 @@
         <p>If you call a support person, give them this info:</p>
         <p class="error-code">Stop code: CRITICAL_PROCESS_DIED</p>
     </div>
-
+    <div class="footer">
+        <p class="error-msg">You can scan the QR code below for more information.</p>
+    </div>
     <div class="qr-code"></div>
 </body>
 </html>
