--- a/privacy.html
+++ b/privacy.html
@@ -16,75 +16,67 @@
         header {
             background-color: #000;
             color: #fff;
-            padding: 50px 20px;
+            padding: 100px 20px;
             text-align: center;
-            animation: fadeIn 2s ease-in-out;
+            position: relative;
         }
 
         header h1 {
-            font-size: 48px;
+            font-size: 60px;
             font-weight: bold;
             margin: 0;
-            animation: slideInFromLeft 1.5s ease-in-out;
         }
 
         header p {
             font-size: 24px;
-            margin-top: 10px;
-            animation: slideInFromRight 1.5s ease-in-out;
+            margin-top: 20px;
         }
 
         section {
-            padding: 60px 20px;
+            padding: 100px 20px;
             text-align: center;
             opacity: 0;
-            animation: fadeIn 2s ease-in-out forwards;
-            overflow: hidden;
+            transform: translateY(50px);
+            transition: all 1.5s ease-in-out;
+            max-width: 900px;
+            margin: 0 auto;
         }
 
         section h2 {
-            font-size: 36px;
+            font-size: 42px;
             margin-bottom: 20px;
-            transform: translateY(50px);
-            animation: slideUp 1s ease-in-out forwards;
+            font-weight: bold;
         }
 
         section p {
-            font-size: 20px;
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-            transform: translateY(50px);
-            animation: slideUp 1.2s ease-in-out forwards;
-            animation-delay: 0.5s;
+            font-size: 24px;
+            margin-bottom: 60px;
+            line-height: 1.6;
+        }
+
+        .hidden-text {
+            display: inline-block;
+            opacity: 0;
+            font-weight: bold;
+            letter-spacing: 2px;
+            transition: all 1s ease-in-out;
         }
 
         .card {
             background: #fff;
             padding: 40px;
-            margin: 20px auto;
+            margin: 40px auto;
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             max-width: 600px;
             transition: transform 0.5s ease, box-shadow 0.5s ease;
             opacity: 0;
             transform: translateY(50px);
-            animation: slideUp 1.4s ease-in-out forwards;
-            animation-delay: 1s;
         }
 
-        .card:hover {
-            transform: translateY(-10px) scale(1.05);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
-        }
-
-        .animated-text {
-            display: inline-block;
-            opacity: 0;
-            animation: textReveal 2s ease-in-out forwards;
-            font-weight: bold;
-            letter-spacing: 2px;
+        .card.active {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         footer {
@@ -92,103 +84,86 @@
             color: #fff;
             text-align: center;
             padding: 30px 20px;
-            animation: fadeIn 2s ease-in-out;
         }
 
         footer p {
             margin: 0;
+            font-size: 18px;
         }
 
-        /* Animations */
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        @keyframes slideInFromLeft {
-            0% { transform: translateX(-100%); opacity: 0; }
-            100% { transform: translateX(0); opacity: 1; }
-        }
-
-        @keyframes slideInFromRight {
-            0% { transform: translateX(100%); opacity: 0; }
-            100% { transform: translateX(0); opacity: 1; }
-        }
-
-        @keyframes slideUp {
-            0% { transform: translateY(50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes textReveal {
-            0% { content: '**********'; opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        /* Longer delay for text reveal in cards */
-        .card .animated-text {
-            animation-delay: 1.5s;
+        /* Scroll-triggered section reveal */
+        .section-active {
+            opacity: 1;
+            transform: translateY(0);
         }
     </style>
 </head>
 <body>
     <header>
-        <h1 class="animated-text">Your Privacy Matters</h1>
-        <p class="animated-text" style="animation-delay: 0.5s;">At Tudify, we believe that privacy is a fundamental human right.</p>
+        <h1>Your Privacy Matters</h1>
+        <p>At Tudify, we believe that privacy is a fundamental human right.</p>
     </header>
 
-    <section style="animation-delay: 1s;">
-        <h2 class="animated-text">SimpleWeb: Zero Data Collection</h2>
-        <p class="animated-text" style="animation-delay: 1.5s;">
-            SimpleWeb is built on the principle that your data is yours and yours alone. We don’t track, store, or sell any of your information. Your browsing experience is entirely private.
+    <section>
+        <h2>SimpleWeb: Zero Data Collection</h2>
+        <p>
+            SimpleWeb is built on the principle that your data is yours and yours alone. 
+            <span class="hidden-text">We don’t track, store, or sell any of your information.</span> 
+            Your browsing experience is entirely private.
         </p>
-        <div class="card">
-            <p class="animated-text">* * * * *</p>
-        </div>
     </section>
 
-    <section style="animation-delay: 2s;">
-        <h2 class="animated-text">TudifyID: Minimal Data, Maximum Control</h2>
-        <p class="animated-text" style="animation-delay: 2.5s;">
-            Your TudifyID is designed to store only the most essential information. We collect just what is necessary to provide you with a seamless experience, while giving you full control over your data.
+    <section>
+        <h2>TudifyID: Minimal Data, Maximum Control</h2>
+        <p>
+            Your TudifyID is designed to store only the most essential information. 
+            <span class="hidden-text">We collect just what is necessary to provide you with a seamless experience.</span> 
+            You have full control over your data.
         </p>
-        <div class="card">
-            <p class="animated-text">* * * * * *</p>
-        </div>
     </section>
 
-    <section style="animation-delay: 3s;">
-        <h2 class="animated-text">Wall: Protecting Your Personal Space</h2>
-        <p class="animated-text" style="animation-delay: 3.5s;">
-            Wall is your personal fortress on Tudify. It only gathers the bare minimum data required for it to function, ensuring that your personal space remains personal.
+    <section>
+        <h2>Wall: Protecting Your Personal Space</h2>
+        <p>
+            Wall is your personal fortress on Tudify. 
+            <span class="hidden-text">It only gathers the bare minimum data required for it to function.</span> 
+            Your personal space remains personal.
         </p>
-        <div class="card">
-            <p class="animated-text">* * * * * * *</p>
-        </div>
-    </section>
-
-    <section style="animation-delay: 4s;">
-        <h2 class="animated-text">Our Commitment to You</h2>
-        <p class="animated-text" style="animation-delay: 4.5s;">
-            At Tudify, we are committed to ensuring your data remains safe and secure. Our policies are transparent, and you have the control to decide what happens to your information. No hidden agendas, just privacy that you can trust.
-        </p>
-        <div class="card">
-            <p class="animated-text">* * * * * * * *</p>
-        </div>
-    </section>
-
-    <section style="animation-delay: 5s;">
-        <h2 class="animated-text">Innovation with Privacy in Mind</h2>
-        <p class="animated-text" style="animation-delay: 5.5s;">
-            We believe in innovation without compromising your privacy. Our products are designed with the highest standards of privacy in mind, ensuring that you can use Tudify with confidence.
-        </p>
-        <div class="card">
-            <p class="animated-text">* * * * * * * * *</p>
-        </div>
     </section>
 
     <footer>
         <p>&copy; 2024 Tudify. All rights reserved.</p>
     </footer>
+
+    <script>
+        // Function to handle scroll-triggered animations
+        function handleScroll() {
+            const sections = document.querySelectorAll('section');
+            const hiddenTexts = document.querySelectorAll('.hidden-text');
+
+            sections.forEach(section => {
+                const sectionTop = section.getBoundingClientRect().top;
+                const sectionHeight = section.clientHeight;
+
+                if (sectionTop <= window.innerHeight - sectionHeight / 3) {
+                    section.classList.add('section-active');
+                }
+            });
+
+            hiddenTexts.forEach(text => {
+                const textTop = text.getBoundingClientRect().top;
+
+                if (textTop <= window.innerHeight - 100) {
+                    text.style.opacity = '1';
+                }
+            });
+        }
+
+        // Event listener for scroll
+        window.addEventListener('scroll', handleScroll);
+
+        // Initial trigger to animate any sections already in view on load
+        handleScroll();
+    </script>
 </body>
 </html>
